# 9.-Docker

./: .env.sample  Dockerfile  README.md  docker-compose.yml  payment_fixture.json  pyproject.toml
config/: settings.py  urls.py
materials/: models.py  serializer.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_alter_lesson_course.py  0003_course_owner_lesson_owner.py  0004_subscription.py  0005_course_price.py
users/: admin.py  filters.py  models.py  permissions.py  services.py  urls.py  views.py
users/management/commands/: cgm.py  csu.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_payment_link_payment_session_id.py
